src/main/java/language/RusticodeParser.java
// Generated from C:/Users/Evelin Suarez/OneDrive/Desktop/Estudio/repoR/src/main/antlr4/Rusticode.g4 by ANTLR 4.13.1
package language;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class RusticodeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, START=9, 
		END=10, DEFINT=11, DEFREAL=12, DEFCHAR=13, IF=14, ENDIF=15, WHILE=16, 
		ENDWHILE=17, TRUE=18, FALSE=19, SUM=20, REST=21, MULT=22, HIGH=23, LESS=24, 
		HEQL=25, LEQL=26, UNEQL=27, AND=28, OR=29, EQUAL=30, NEGT=31, ASSIG=32, 
		DOUPOINT=33, DDPOINT=34, SEMICOLON=35, OPENBRACKET=36, CLOSEDBRACKET=37, 
		OPENKEY=38, CLOSEKEY=39, NUM=40, CHAR=41, VAR=42, SW=43;
	public static final int
		RULE_programa = 0, RULE_sentencia = 1, RULE_definicion = 2, RULE_asignacion = 3, 
		RULE_exp_mat = 4, RULE_termino = 5, RULE_factor = 6, RULE_bool = 7, RULE_exp_log = 8, 
		RULE_if_sentence = 9, RULE_while_sentence = 10, RULE_type = 11, RULE_literal_value = 12, 
		RULE_start = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "sentencia", "definicion", "asignacion", "exp_mat", "termino", 
			"factor", "bool", "exp_log", "if_sentence", "while_sentence", "type", 
			"literal_value", "start"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'?int'", "'?real'", "'?char'", "'?bool'", "'['", "']'", "'hello'", 
			"'world'", "'start:'", "'end'", "'int'", "'real'", "'char'", "'if'", 
			"'endif'", "'while'", "'endwhile'", "'True'", "'False'", "'+'", "'-'", 
			"'*'", "'>'", "'<'", "'>='", "'<='", "'!='", "'&&'", "'||'", "'=='", 
			"'\\u00AC'", "'<<'", "':'", "'::'", "';'", "'('", "')'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "START", "END", 
			"DEFINT", "DEFREAL", "DEFCHAR", "IF", "ENDIF", "WHILE", "ENDWHILE", "TRUE", 
			"FALSE", "SUM", "REST", "MULT", "HIGH", "LESS", "HEQL", "LEQL", "UNEQL", 
			"AND", "OR", "EQUAL", "NEGT", "ASSIG", "DOUPOINT", "DDPOINT", "SEMICOLON", 
			"OPENBRACKET", "CLOSEDBRACKET", "OPENKEY", "CLOSEKEY", "NUM", "CHAR", 
			"VAR", "SW"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Rusticode.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RusticodeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode START() { return getToken(RusticodeParser.START, 0); }
		public SentenciaContext sentencia() {
			return getRuleContext(SentenciaContext.class,0);
		}
		public TerminalNode END() { return getToken(RusticodeParser.END, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RusticodeVisitor ) return ((RusticodeVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			match(START);
			setState(29);
			sentencia();
			setState(30);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(RusticodeParser.SEMICOLON, 0); }
		public DefinicionContext definicion() {
			return getRuleContext(DefinicionContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public If_sentenceContext if_sentence() {
			return getRuleContext(If_sentenceContext.class,0);
		}
		public While_sentenceContext while_sentence() {
			return getRuleContext(While_sentenceContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).exitSentencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RusticodeVisitor ) return ((RusticodeVisitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencia);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
			case T__2:
			case T__3:
			case DEFINT:
			case DEFREAL:
			case DEFCHAR:
				{
				setState(32);
				definicion();
				}
				break;
			case VAR:
				{
				setState(33);
				asignacion();
				}
				break;
			case IF:
				{
				setState(34);
				if_sentence();
				}
				break;
			case WHILE:
				{
				setState(35);
				while_sentence();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(38);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinicionContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode DDPOINT() { return getToken(RusticodeParser.DDPOINT, 0); }
		public TerminalNode VAR() { return getToken(RusticodeParser.VAR, 0); }
		public TerminalNode ASSIG() { return getToken(RusticodeParser.ASSIG, 0); }
		public Literal_valueContext literal_value() {
			return getRuleContext(Literal_valueContext.class,0);
		}
		public TerminalNode NUM() { return getToken(RusticodeParser.NUM, 0); }
		public DefinicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).enterDefinicion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).exitDefinicion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RusticodeVisitor ) return ((RusticodeVisitor<? extends T>)visitor).visitDefinicion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinicionContext definicion() throws RecognitionException {
		DefinicionContext _localctx = new DefinicionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definicion);
		int _la;
		try {
			setState(55);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DEFINT:
			case DEFREAL:
			case DEFCHAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				type();
				setState(41);
				match(DDPOINT);
				setState(42);
				match(VAR);
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASSIG) {
					{
					setState(43);
					match(ASSIG);
					setState(44);
					literal_value();
					}
				}

				}
				break;
			case T__0:
			case T__1:
			case T__2:
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(48);
				match(DDPOINT);
				setState(49);
				match(VAR);
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__4) {
					{
					setState(50);
					match(T__4);
					setState(51);
					match(NUM);
					setState(52);
					match(T__5);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(RusticodeParser.VAR, 0); }
		public List<TerminalNode> ASSIG() { return getTokens(RusticodeParser.ASSIG); }
		public TerminalNode ASSIG(int i) {
			return getToken(RusticodeParser.ASSIG, i);
		}
		public Literal_valueContext literal_value() {
			return getRuleContext(Literal_valueContext.class,0);
		}
		public Exp_matContext exp_mat() {
			return getRuleContext(Exp_matContext.class,0);
		}
		public TerminalNode NUM() { return getToken(RusticodeParser.NUM, 0); }
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).enterAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).exitAsignacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RusticodeVisitor ) return ((RusticodeVisitor<? extends T>)visitor).visitAsignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(VAR);
			setState(58);
			match(ASSIG);
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(59);
				literal_value();
				}
				break;
			case 2:
				{
				setState(60);
				exp_mat();
				}
				break;
			case 3:
				{
				setState(61);
				match(T__4);
				setState(62);
				match(NUM);
				setState(63);
				match(T__5);
				setState(64);
				match(ASSIG);
				setState(65);
				literal_value();
				}
				break;
			case 4:
				{
				setState(66);
				exp_mat();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Exp_matContext extends ParserRuleContext {
		public List<TerminoContext> termino() {
			return getRuleContexts(TerminoContext.class);
		}
		public TerminoContext termino(int i) {
			return getRuleContext(TerminoContext.class,i);
		}
		public List<TerminalNode> SUM() { return getTokens(RusticodeParser.SUM); }
		public TerminalNode SUM(int i) {
			return getToken(RusticodeParser.SUM, i);
		}
		public List<TerminalNode> REST() { return getTokens(RusticodeParser.REST); }
		public TerminalNode REST(int i) {
			return getToken(RusticodeParser.REST, i);
		}
		public Exp_matContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_mat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).enterExp_mat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).exitExp_mat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RusticodeVisitor ) return ((RusticodeVisitor<? extends T>)visitor).visitExp_mat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Exp_matContext exp_mat() throws RecognitionException {
		Exp_matContext _localctx = new Exp_matContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_exp_mat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			termino();
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SUM || _la==REST) {
				{
				setState(74);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case SUM:
					{
					setState(70);
					match(SUM);
					setState(71);
					termino();
					}
					break;
				case REST:
					{
					setState(72);
					match(REST);
					setState(73);
					termino();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TerminoContext extends ParserRuleContext {
		public List<FactorContext> factor() {
			return getRuleContexts(FactorContext.class);
		}
		public FactorContext factor(int i) {
			return getRuleContext(FactorContext.class,i);
		}
		public List<TerminalNode> MULT() { return getTokens(RusticodeParser.MULT); }
		public TerminalNode MULT(int i) {
			return getToken(RusticodeParser.MULT, i);
		}
		public List<TerminalNode> REST() { return getTokens(RusticodeParser.REST); }
		public TerminalNode REST(int i) {
			return getToken(RusticodeParser.REST, i);
		}
		public TerminoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termino; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).enterTermino(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).exitTermino(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RusticodeVisitor ) return ((RusticodeVisitor<? extends T>)visitor).visitTermino(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TerminoContext termino() throws RecognitionException {
		TerminoContext _localctx = new TerminoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_termino);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			factor();
			setState(86);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(84);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case MULT:
						{
						setState(80);
						match(MULT);
						setState(81);
						factor();
						}
						break;
					case REST:
						{
						setState(82);
						match(REST);
						setState(83);
						factor();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(88);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FactorContext extends ParserRuleContext {
		public TerminalNode OPENBRACKET() { return getToken(RusticodeParser.OPENBRACKET, 0); }
		public Exp_matContext exp_mat() {
			return getRuleContext(Exp_matContext.class,0);
		}
		public TerminalNode CLOSEDBRACKET() { return getToken(RusticodeParser.CLOSEDBRACKET, 0); }
		public TerminalNode NUM() { return getToken(RusticodeParser.NUM, 0); }
		public TerminalNode VAR() { return getToken(RusticodeParser.VAR, 0); }
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).enterFactor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).exitFactor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RusticodeVisitor ) return ((RusticodeVisitor<? extends T>)visitor).visitFactor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FactorContext factor() throws RecognitionException {
		FactorContext _localctx = new FactorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_factor);
		try {
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OPENBRACKET:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				match(OPENBRACKET);
				setState(90);
				exp_mat();
				setState(91);
				match(CLOSEDBRACKET);
				}
				break;
			case NUM:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				match(NUM);
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				match(VAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoolContext extends ParserRuleContext {
		public TerminalNode TRUE() { return getToken(RusticodeParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(RusticodeParser.FALSE, 0); }
		public List<Exp_logContext> exp_log() {
			return getRuleContexts(Exp_logContext.class);
		}
		public Exp_logContext exp_log(int i) {
			return getRuleContext(Exp_logContext.class,i);
		}
		public TerminalNode EQUAL() { return getToken(RusticodeParser.EQUAL, 0); }
		public BoolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).enterBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).exitBool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RusticodeVisitor ) return ((RusticodeVisitor<? extends T>)visitor).visitBool(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoolContext bool() throws RecognitionException {
		BoolContext _localctx = new BoolContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_bool);
		int _la;
		try {
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TRUE:
			case FALSE:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				_la = _input.LA(1);
				if ( !(_la==TRUE || _la==FALSE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case NEGT:
			case OPENBRACKET:
			case NUM:
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				exp_log(0);
				setState(99);
				match(EQUAL);
				setState(100);
				exp_log(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Exp_logContext extends ParserRuleContext {
		public List<TerminalNode> VAR() { return getTokens(RusticodeParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(RusticodeParser.VAR, i);
		}
		public TerminalNode EQUAL() { return getToken(RusticodeParser.EQUAL, 0); }
		public TerminalNode NUM() { return getToken(RusticodeParser.NUM, 0); }
		public TerminalNode NEGT() { return getToken(RusticodeParser.NEGT, 0); }
		public TerminalNode OPENBRACKET() { return getToken(RusticodeParser.OPENBRACKET, 0); }
		public List<Exp_logContext> exp_log() {
			return getRuleContexts(Exp_logContext.class);
		}
		public Exp_logContext exp_log(int i) {
			return getRuleContext(Exp_logContext.class,i);
		}
		public TerminalNode CLOSEDBRACKET() { return getToken(RusticodeParser.CLOSEDBRACKET, 0); }
		public TerminalNode AND() { return getToken(RusticodeParser.AND, 0); }
		public TerminalNode OR() { return getToken(RusticodeParser.OR, 0); }
		public TerminalNode HIGH() { return getToken(RusticodeParser.HIGH, 0); }
		public TerminalNode LESS() { return getToken(RusticodeParser.LESS, 0); }
		public TerminalNode HEQL() { return getToken(RusticodeParser.HEQL, 0); }
		public TerminalNode LEQL() { return getToken(RusticodeParser.LEQL, 0); }
		public Exp_logContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_log; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).enterExp_log(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RusticodeListener ) ((RusticodeListener)listener).exitExp_log(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RusticodeVisitor ) return ((RusticodeVisitor<? extends T>)visitor).visitExp_log(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Exp_logContext exp_log() throws RecognitionException {
		return exp_log(0);
	}
